[project]
name = "xai-project-cmp627"
version = "0.1.0"
description = ""
authors = [
    {name = "Edmar",email = "edmar.bevi@gmail.com"}
]
readme = "README.md"
package-mode = false
requires-python = ">=3.11"
dependencies = [
    "shap (>=0.47.2,<0.48.0)"
]

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.1.1"
pandas = "^2.3.0"
torch = "^2.7.1"
torchvision = "^0.22.1"
timm = "^1.0.15"
matplotlib = "^3.10.3"
scikit-image = "^0.25.2"
lime = "^0.2.0.1"
captum = "^0.8.0"
grad-cam = "^1.5.5"
fastai = "^2.8.2"
numpy = "^1.26.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
